--- a/src/app/product/product.component.html
+++ b/src/app/product/product.component.html
@@ -1,28 +1,34 @@
-<div class="formbold-main-wrapper">
-    <div class="formbold-form-wrapper">
-      <img src="your-image-url-here.jpg" alt="Product Image" class="formbold-img">
-      
-      <form action="https://formbold.com/s/FORM_ID" method="POST">
-        <h2 class="formbold-form-title">Add Product Information</h2>
-        <p>Please fill in the details of the product.</p>
-        
-        <label for="productName" class="formbold-form-label">Product Name</label>
-        <input type="text" name="productName" id="productName" class="formbold-form-input" required />
-  
-        <label for="productCost" class="formbold-form-label">Product Cost</label>
-        <input type="number" name="productCost" id="productCost" class="formbold-form-input" required />
-        
-        <label for="productType" class="formbold-form-label">Product Type</label>
-        <input type="text" name="productType" id="productType" class="formbold-form-input" required />
-  
-        <label for="productCode" class="formbold-form-label">Product Code</label>
-        <input type="text" name="productCode" id="productCode" class="formbold-form-input" required />
-  
-        <label for="productImage" class="formbold-form-label">Product Image URL</label>
-        <input type="text" name="productImage" id="productImage" class="formbold-form-input" required />
-  
-        <button type="submit" class="formbold-btn">Add Product</button>
-      </form>
+<div class="row">
+    <div class="col-md-6 mx-auto p-0">
+        <div class="card">
+            <div class="product-box">
+                <div class="product-form">
+                    <div class="group">
+                        <label for="product-name" class="label">Product Name</label>
+                        <input type="text" class="input" id="product-name" placeholder="Enter product name">
+                    </div>
+                    <div class="group">
+                        <label for="product-description" class="label">Product Description</label>
+                        <textarea class="input" id="product-description" rows="3"
+                            placeholder="Enter product description"></textarea>
+                    </div>
+                    <div class="group">
+                        <label for="product-price" class="label">Product Price</label>
+                        <input type="number" class="input" id="product-price" placeholder="Enter product price">
+                    </div>
+                    <div class="group">
+                        <label for="product-quantity" class="label">Product Quantity</label>
+                        <input type="number" class="input" id="product-quantity" placeholder="Enter product quantity">
+                    </div>
+                    <div class="group">
+                        <label for="product-image" class="label">Product Image</label>
+                        <input type="file" class="input" id="product-image">
+                    </div>
+                    <div class="group">
+                        <button type="submit" class="button">Submit</button>
+                    </div>
+                </div>
+            </div>
+        </div>
     </div>
-  </div>
-  
+</div>
