--- a/src/app/signup/signup.component.html
+++ b/src/app/signup/signup.component.html
@@ -1,1 +1,39 @@
-<p>signup works!</p>
+<div class="row">
+    <div class="col-md-6 mx-auto p-0">
+        <div class="card">
+            <div class="login-box">
+                <div class="login-snip">
+                    <input id="tab-2" type="radio" name="tab" class="sign-up" checked>
+                    <label for="tab-2" class="tab">Sign Up</label>
+                    <div class="login-space">
+                        <div class="sign-up-form">
+                            <div class="group">
+                                <label for="user" class="label">Username</label>
+                                <input id="user" type="text" class="input" placeholder="Create your username">
+                            </div>
+                            <div class="group">
+                                <label for="pass" class="label">Password</label>
+                                <input id="pass" type="password" class="input" placeholder="Create your password">
+                            </div>
+                            <div class="group">
+                                <label for="repass" class="label">Repeat Password</label>
+                                <input id="repass" type="password" class="input" placeholder="Repeat your password">
+                            </div>
+                            <div class="group">
+                                <label for="email" class="label">Email Address</label>
+                                <input id="email" type="email" class="input" placeholder="Enter your email address">
+                            </div>
+                            <div class="group">
+                                <input type="submit" class="button" value="Sign Up">
+                            </div>
+                            <div class="hr"></div>
+                            <div class="foot">
+                                <label for="tab-1">Already Member?</label>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
