Fixed product image display and updated product section styles

--- a/src/app/product/product.component.html
+++ b/src/app/product/product.component.html
@@ -32,3 +32,55 @@
         </div>
     </div>
 </div>
+
+<!-- Products Display Container -->
+<section class="section-products">
+    <div class="container">
+        <div class="row justify-content-center text-center">
+            <div class="col-md-8 col-lg-6">
+                <div class="header">
+                    <h3>Featured Product</h3>
+                    <h2>Popular Products</h2>
+                </div>
+            </div>
+        </div>
+        <div class="row">
+            <!-- Single Product -->
+            <div class="col-md-6 col-lg-4 col-xl-3">
+                <div id="product-1" class="single-product">
+                    <div class="part-1" style="background-image: url('https://cdn.pixabay.com/photo/2024/02/13/19/02/poster-8571685_1280.jpg');">
+                        <ul>
+                            <li><a href="#"><i class="fas fa-shopping-cart"></i></a></li>
+                            <li><a href="#"><i class="fas fa-heart"></i></a></li>
+                            <li><a href="#"><i class="fas fa-plus"></i></a></li>
+                            <li><a href="#"><i class="fas fa-expand"></i></a></li>
+                        </ul>
+                    </div>
+                    <div class="part-2">
+                        <h3 class="product-title">1st Product Sample</h3>
+                        <h4 class="product-old-price">$79.99</h4>
+                        <h4 class="product-price">$49.99</h4>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-6 col-lg-4 col-xl-3">
+                <div id="product-2" class="single-product">
+                    <div class="part-1" style="background-image: url('https://cdn.pixabay.com/photo/2023/12/15/15/52/bird-8450958_1280.png');">
+                        <ul>
+                            <li><a href="#"><i class="fas fa-shopping-cart"></i></a></li>
+                            <li><a href="#"><i class="fas fa-heart"></i></a></li>
+                            <li><a href="#"><i class="fas fa-plus"></i></a></li>
+                            <li><a href="#"><i class="fas fa-expand"></i></a></li>
+                        </ul>
+                    </div>
+                    <div class="part-2">
+                        <h3 class="product-title">2nd Product Sample</h3>
+                        <h4 class="product-old-price">$49.99</h4>
+                        <h4 class="product-price">$29.99</h4>
+                    </div>
+                </div>
+            </div>
+            <!-- Add more products similarly -->
+        </div>
+    </div>
+</section>
